day2 started my own pseudo skeleton template

--- a/tex_examples/ozgrav/main.tex
+++ b/tex_examples/ozgrav/main.tex
@@ -10,7 +10,7 @@
 \usepackage{xspace}
 \usepackage{mathtools}
 %\usepackage{physics}
-\usepackage{tensor}
+%\usepackage{tensor}
 %\usepackage{ulem}
 
 \newcommand{\bilby}{{\sc Bilby}\xspace}
