added 3rd SIR ref to bibtex

--- a/actual_report/main.tex
+++ b/actual_report/main.tex
@@ -107,6 +107,8 @@ Remember to signpost rest of paper at end of this section!
 
 \section{Theoretical Framework}\label{theory}
 
+Need to mention metropolis hastings it seems!
+
 Don't apply it to our sitaution at this stage, just straight theory and equations (Section \ref{methods} deals with taking these eqns arnd applying them to our situation)
 
 \subsection{Monte Carlo Framework}\label{theory:monte}
@@ -142,6 +144,8 @@ Do theory on normal IS and then say that SIR is an monte carlo approach/approx t
 \subsection{Self-consistency}
 
 \subsection{Reproducibility}
+
+Talk about how 'binning' is preventing proper error profile acorss the likelihood range, (not present in the \dynesty case)
 
 \subsection{Importance Resampling}
 
