--- a/actual_report/refs.bib
+++ b/actual_report/refs.bib
@@ -14,6 +14,19 @@
 
 % MY INTRO REFS
 
+% unified framework for SIR
+@inproceedings{1592027,
+  author    = {K. {Heine}},
+  booktitle = {2005 7th International Conference on Information Fusion},
+  title     = {Unified framework for sampling/importance resampling algorithms},
+  year      = {2005},
+  volume    = {2},
+  number    = {},
+  pages     = {6 pp.-},
+  doi       = {10.1109/ICIF.2005.1592027}
+}
+
+
 % improved SIR, want to implement this in future work (removes bias)
 @article{10.2307/4616798,
   issn      = {03036898, 14679469},
@@ -28,7 +41,6 @@
   volume    = {30},
   year      = {2003}
 }
-
 
 
 % my basic SIR reference - need to link to more established ones
@@ -2510,6 +2522,8 @@ Saulson and Peter Shawhan},
 }
 
 % MICHAEL REFS (only have .bbl of michael's so it's going to be a lot of hand drawn info unfortunately)
+
+
 
 % SOFTWARE
 
