--- a/actual_report/main.tex
+++ b/actual_report/main.tex
@@ -10,7 +10,7 @@
 \usepackage{mathtools}
 \usepackage{physics}
 \usepackage{acronym}
-
+\usepackage{subfigure}
 
 \newcommand{\bilby}{{\sc Bilby}\xspace}
 \newcommand{\lal}{{\sc LAL}\xspace}
@@ -48,6 +48,7 @@
 \newcommand{\figwidth}{8.6cm}
 \newcommand{\onehalffigwidth}{12.9cm}
 \newcommand{\doublefigwidth}{17.2cm}
+\newcommand{\montefigwidth}{11cm}
 
 \begin{document}
 
@@ -87,8 +88,6 @@ My 250 word abstract goes here...
 
 \section{Introduction}\label{intro}
 
-\textbf{\textcolor{red}{Figs: LIGO Cumulative events}}
-
 \textbf{\textcolor{red}{Figs: Hunter's Vit Schematic}}
 
 
@@ -98,6 +97,14 @@ Remember to signpost rest of paper at end of this section!
 %\subsection{}
 %
 \subsection{\vitamin: User-Friendly Inference}\label{vit}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\figwidth]{figs/network_setup.png}
+	\caption{Example of how a normalising flow trained on a set of live points can produce samples within current iso-likelihood contour for simple two-dimensional parameter space. \textbf{Top:} example of training samples in the physical space $\physical$ and learned mapping to the latent space $\latent$ with the iso-likelihood contour for the current \textit{worst point} shown in orange. \textbf{Middle:} samples drawn from a truncated Guassian within the iso-likelihood contour in $\latent$ and mapped to $\physical$ using the inverse mapping. \textbf{Bottom:} pool of accepted samples after applying rejection sampling until 1000 points are obtained shown in both $\latent$ and $\physical$.}
+	\label{fig:learning_contours}
+\end{figure}
+
 %
 %\subsection{Structure}
 %
@@ -133,9 +140,16 @@ Apply the intro/theory mateiral to our case, JUSTIFY scientific decisions like n
 	\label{fig:learning_contours}
 \end{figure}
 
+\begin{figure*}
+	\subfigure{\includegraphics[width=\figwidth]{figs/vit_train_corner1.pdf}}
+	\subfigure{\includegraphics[width=\figwidth]{figs/vit_train_corner2.pdf}}
+	\caption{Probability-probability (P-P) plot showing the confidence interval versus the fraction of the events within that confidence interval for the posterior distributions obtained using our analysis \nessai for 128 simulated compact binary coalescence signals produced with \bilby and \bilbypipe. The 1-, 2- and 3-$\sigma$ confidence intervals are indicated by the shaded regions and $p$-values are shown for each of the parameters and the combined $p$-value is also shown.}
+	\label{fig:pp_plot}
+\end{figure*}
+
 \textbf{\textcolor{red}{Figs: loss plot}}
 
-\textbf{\textcolor{red}{Tables: training hypers in table}}
+\textbf{\textcolor{green}{Tables: training hypers in table}}
 
 \textbf{\textcolor{red}{Figs: initial corner plot? (to talk about params and how posteriors aren't perfect)}}
 
@@ -144,6 +158,14 @@ Need this cornerplot here to talk about how it doesn't `get' the multimodal dist
 \subsection{Likelihood Estimates}
 
 \textbf{\textcolor{red}{Figs: Monte flowchart}}
+
+\begin{figure*}
+	\centering
+	\includegraphics[width=\montefigwidth]{figs/tikz_monte.pdf}
+	\caption{Diagram of a normalising flow $f(x)$ composed of four coupling transforms which maps an \protect\ndimensional{n} input vector x to an \protect\ndimensional{n} latent vector z. Each transform splits $x$ in two $[x_{1:m}, x_{m+1:n}]$ and updates one part conditioned on the other. In the first and third transforms $x_{1:m}$ is used as the input to a neural network (NN) which then produces the scale $s$ and translation $t$ vectors of length $m$. The element-wise product ($\odot$) is then computed between $x_{1:m}$ and $\exp(s)$ followed by the sum of the output and $t$. This is shown in the left transform. In the second and fourth transforms $x_{1:m}$ is updated conditioned on $x_{m+1:n}$ as shown in the right transform.}
+	\label{fig:flow_diagram}
+\end{figure*}
+
 
 \subsection{Importance Resampling}
 
@@ -154,23 +176,52 @@ Need this cornerplot here to talk about how it doesn't `get' the multimodal dist
 
 \textbf{\textcolor{red}{Figs: Self consist corner plot}}
 
+\begin{figure*}
+	\subfigure{\includegraphics[width=\figwidth]{figs/self_consist1.pdf}}
+	\subfigure{\includegraphics[width=\figwidth]{figs/self_consist2.pdf}}
+	\caption{Probability-probability (P-P) plot showing the confidence interval versus the fraction of the events within that confidence interval for the posterior distributions obtained using our analysis \nessai for 128 simulated compact binary coalescence signals produced with \bilby and \bilbypipe. The 1-, 2- and 3-$\sigma$ confidence intervals are indicated by the shaded regions and $p$-values are shown for each of the parameters and the combined $p$-value is also shown.}
+	\label{fig:pp_plot}
+\end{figure*}
+
+
 \subsection{Reproducibility}
 
 Talk about how 'binning' is preventing proper error profile acorss the likelihood range, (not present in the \dynesty case)
 
-\textbf{\textcolor{red}{Figs: z batch vs sigma}}
-
 \textbf{\textcolor{red}{Figs: sigma gaussians for different z batch}}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\figwidth]{figs/hists_rect.pdf}
+	\caption{Example of how a normalising flow trained on a set of live points can produce samples within current iso-likelihood contour for simple two-dimensional parameter space. \textbf{Top:} example of training samples in the physical space $\physical$ and learned mapping to the latent space $\latent$ with the iso-likelihood contour for the current \textit{worst point} shown in orange. \textbf{Middle:} samples drawn from a truncated Guassian within the iso-likelihood contour in $\latent$ and mapped to $\physical$ using the inverse mapping. \textbf{Bottom:} pool of accepted samples after applying rejection sampling until 1000 points are obtained shown in both $\latent$ and $\physical$.}
+	\label{fig:learning_contours}
+\end{figure}
+
+
 
 \textbf{\textcolor{red}{Figs: scatter vit vit}}
 
 \textbf{\textcolor{red}{Figs: scatter vit dynesty}}
+
+
+\begin{figure*}
+	\subfigure[]{\includegraphics[width=\figwidth]{figs/vvscatter.pdf}}
+	\subfigure[]{\includegraphics[width=\figwidth]{figs/bvscatter.pdf}}
+	\caption{Probability-probability (P-P) plot showing the confidence interval versus the fraction of the events within that confidence interval for the posterior distributions obtained using our analysis \nessai for 128 simulated compact binary coalescence signals produced with \bilby and \bilbypipe. The 1-, 2- and 3-$\sigma$ confidence intervals are indicated by the shaded regions and $p$-values are shown for each of the parameters and the combined $p$-value is also shown.}
+	\label{fig:pp_plot}
+\end{figure*}
 
 \subsection{Importance Resampling}
 
 
 \textbf{\textcolor{red}{Figs: Final corner plot (big)}}
 
+\begin{figure*}[h]
+	\centering
+	\includegraphics[width=\doublefigwidth]{figs/resample_corner.pdf}
+	\caption{Corner plot comparing the posterior distributions produced with \dynesty (blue) and our sampler \nessai (red). The phase is marginalised and remaining 14 parameters are shown, see \cref{app:priors} for details on the parameters. The respective 16\% and 84\% quantiles are also shown in the \protect\ndimensional{1} marginalised posteriors.}
+	\label{fig:corner}
+\end{figure*}
 
 \section{Future Work}\label{future}
 
