--- a/actual_report/refs.bib
+++ b/actual_report/refs.bib
@@ -14,6 +14,14 @@
 
 % MY INTRO REFS
 
+% jason's flows liot rev
+@article{papamakarios2019normalizing,
+  title   = {Normalizing flows for probabilistic modeling and inference},
+  author  = {Papamakarios, George and Nalisnick, Eric and Rezende, Danilo Jimenez and Mohamed, Shakir and Lakshminarayanan, Balaji},
+  journal = {arXiv preprint arXiv:1912.02762},
+  year    = {2019}
+}
+
 % unified framework for SIR
 @inproceedings{1592027,
   author    = {K. {Heine}},
