removed matric no from paper added proj no

--- a/actual_report/main.tex
+++ b/actual_report/main.tex
@@ -54,7 +54,7 @@
 
 \title{Explainable Deep-learning: Monte Carlo methods for Gravitational-Wave Inference}
 
-\author{2259886}
+\author{Project No:~628}
 %\email{ethan.payne@ligo.org}
 \affiliation{%
 	SUPA, School of Physics and Astronomy \\
@@ -238,7 +238,7 @@ This is section has to encapsulate everything we did so that after the abstract 
 As we find ourself in a proof-of-concept mode, there is justification of a section dedicated to the next steps leading towards production of this code.
 
 
-\section{Acknowledgements}
+\section*{Acknowledgements}
 
 Thanks to Chris and Hunter and Michael and Daniel.
 
