first half of skeleton structure

--- a/actual_report/main.tex
+++ b/actual_report/main.tex
@@ -172,7 +172,7 @@ Need this cornerplot here to talk about how it doesn't `get' the multimodal dist
 \end{figure*}
 
 
-\subsection{Importance Resampling}
+\subsection{Likelihood Reweighting}
 
 
 \section{Results}\label{results}
