--- a/actual_report/main.tex
+++ b/actual_report/main.tex
@@ -55,12 +55,10 @@
 \title{Explainable Deep-learning: Monte Carlo methods for Gravitational-Wave Inference}
 
 \author{Project No:~628}
-%\email{ethan.payne@ligo.org}
 \affiliation{%
 	SUPA, School of Physics and Astronomy \\
 	University of Glasgow \\
-	Glasgow G12 8QQ, United Kingdom
-}%
+	Glasgow G12 8QQ, United Kingdom}%
 
 \date{\today}
 
