--- a/actual_report/refs.bib
+++ b/actual_report/refs.bib
@@ -14,6 +14,31 @@
 
 % MY INTRO REFS
 
+% OG MCMC
+
+@article{hastings1970monte,
+  title     = {Monte Carlo sampling methods using Markov chains and their applications},
+  author    = {Hastings, W Keith},
+  year      = {1970},
+  publisher = {Oxford University Press}
+}
+
+% OG NS
+
+@article{skilling2006nested,
+  title     = {Nested sampling for general Bayesian computation},
+  author    = {Skilling, John and others},
+  journal   = {Bayesian analysis},
+  volume    = {1},
+  number    = {4},
+  pages     = {833--859},
+  year      = {2006},
+  publisher = {International Society for Bayesian Analysis}
+}
+
+
+
+
 % jason's flows liot rev
 @article{papamakarios2019normalizing,
   title   = {Normalizing flows for probabilistic modeling and inference},
