--- a/actual_report/report_draft1.tex
+++ b/actual_report/report_draft1.tex
@@ -244,7 +244,7 @@ Thanks to Chris and Hunter and Michael and Daniel.
 
 Paragraph on the software used \bilby\cite{bilby} 
 %\clearpage
-\bibliography{refs}
+%\bibliography{refs}
 
 
 
