--- a/actual_report/refs.bib
+++ b/actual_report/refs.bib
@@ -16,7 +16,7 @@
 
 % OG MCMC
 
-@article{hastings1970monte,
+@article{mcmc_og,
   title     = {Monte Carlo sampling methods using Markov chains and their applications},
   author    = {Hastings, W Keith},
   year      = {1970},
@@ -84,7 +84,7 @@
   school = {The Chinese University of Hong Kong}
 }
 
-
+& nessai
 @article{williams2021nested,
   title   = {Nested Sampling with Normalising Flows for Gravitational-Wave Inference},
   author  = {Williams, Michael J and Veitch, John and Messenger, Chris},
