--- a/tex_examples/hunter/VItamin.tex
+++ b/tex_examples/hunter/VItamin.tex
@@ -547,13 +547,13 @@ the different posterior sampling approaches.}
 $\displaystyle\frac{\tau_{\text{VItamin}}}{\tau_{X}}$} \\
 & min & max & median & \\
 \hline
-\texttt{Dynesty}\footnote{The benchmark samplers all produced
-$\mathcal{O}(10000)$ samples dependent on the default sampling parameters
-used.}~\cite{dynesty} & 11795 & 29838 & 19400
-\footnote{We note that there are a growing number of specialised
-techniques~\cite{2016PhRvD..94d4031S,2019PhRvD..99h4026W,2019PhRvD.100d3030T}
-designed to speed up traditional sampling algorithms that could be used to
-reduce the runtimes quoted here by $\mathcal{O}(1-2)$ orders of magnitude.}
+\texttt{Dynesty} (s)
+% \footnote{The benchmark samplers all produced \mathcal{O}(10000)$ samples dependent on the default sampling parameters used.}~\cite{dynesty} 
+& 11795 & 29838 & 19400
+% \footnote{We note that there are a growing number of specialised
+% techniques~\cite{2016PhRvD..94d4031S,2019PhRvD..99h4026W,2019PhRvD.100d3030T}
+% designed to speed up traditional sampling algorithms that could be used to
+% reduce the runtimes quoted here by $\mathcal{O}(1-2)$ orders of magnitude.}
 %\footnote{The reader may note that benchmark sampler run times are a few orders
 %of magnitude lower than what is typical of a complete \ac{BBH} analysis
 %($\mathcal{O}(10^{4} -10^{5})$ seconds). This is primarily due our use of a
